--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -15,9 +15,17 @@ a:hover{
     color: rgb(196, 187, 187);
 }
 
-#btn-login{
+.btn-login{
     background-color: gray;
     padding: 10px;
     border-radius: 5px;
     color: white;
+}
+
+
+@media screen and (max-width:500px) {
+    li{
+        /* margin-top: 10px; */
+        margin-bottom: 15px;
+    }
 }
