home page completely responsive

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,3 +8,7 @@
 .opening-hours{
     font-size: 30px;
 }
+
+@media screen and (max-width:575px) {
+    .footer-container{flex-direction: column;}
+}
