--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -14,3 +14,10 @@
     transform: scale(1.2);
     transition-duration: 1s;
 }
+
+
+@media screen and (max-width:576px) {
+    .gallery-container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
