--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -33,5 +33,8 @@ a:hover{
     .nav-container-custom{
         background-color: rgb(92, 86, 86);
     }
+    .btn-login{
+        margin-top: 20px;
+    }
     
 }
