second extra section added

--- a/src/components/ChefRecipe/ChefRecipe.css
+++ b/src/components/ChefRecipe/ChefRecipe.css
@@ -32,3 +32,15 @@
     grid-gap: 20px;
     /* grid-auto-rows: 1vh; */
 }
+
+@media screen and (max-width:576px) {
+    .recipe-cards{
+        grid-template-columns: 1fr;
+    }
+    .image-and-recipes{
+        grid-template-columns: 1fr;
+    }
+    .chef-small-details{
+        width: 100%;
+    }
+}
